# Puch_AI_HACKATHON_PROJECT

./: .env.example  README.md  pyproject.toml
.github/workflows/: render_ping.yaml
server/: backchodi-battle-puch.py
