[project]
name = "mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio-extras>=1.3.0",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
    "langchain-core>=0.1.0",
    "langchain-xai>=0.1.0",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "readabilipy>=0.3.0",
]
